--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-radio",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "ngRadio",
   "main": "index.js",
   "directories": {
@@ -22,6 +22,7 @@
   "devDependencies": {
     "angular": "^1.4.4",
     "angular-mocks": "^1.4.4",
+    "bower": "^1.5.2",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
