--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "angular": "^1.4.4",
     "angular-mocks": "^1.4.4",
     "bower": "^1.5.2",
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.4.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
